--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,29 @@
 p {
   color: black; }
 
+@media only screen and (max-width: 600px) {
+  img {
+    -ms-transform: rotate(90deg);
+    /* webkit for browsers IE 9 */
+    transform: rotate(90deg); } }
+
+#indexBody {
+  background: url(/img/indexbackground.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover; }
+
 #landingPageHeader {
   font-family: "Righteous", cursive;
   font-size: 15vw; }
 
 #landingPagefooter {
   font-family: "Righteous", cursive;
-  font-size: 2.3vw; }
+  font-size: 2.6vw; }
+
+#landingButton {
+  position: absolute;
+  top: 10px;
+  right: 16px;
+  z-index: 1; }
