--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,23 @@
 p {
-  color: black; }
+  color: black;
+  font-family: "Montserrat", sans-serif; }
 
-@media only screen and (max-width: 600px) {
-  img {
-    -ms-transform: rotate(90deg);
-    /* webkit for browsers IE 9 */
-    transform: rotate(90deg); } }
+button {
+  font-family: "Montserrat", sans-serif; }
 
 #indexBody {
-  background: url(/img/indexbackground.jpg) no-repeat center center fixed;
+  background: url(/img/indexbackground.jpg) fixed;
+  background-position: center center;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover; }
+
+#homepageBody {
+  background: url(/img/homePageBackground.jpg) fixed;
+  background-position: center center;
+  background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -20,10 +29,35 @@ p {
 
 #landingPagefooter {
   font-family: "Righteous", cursive;
-  font-size: 2.6vw; }
+  font-size: 2.6vmax; }
 
 #landingButton {
   position: absolute;
   top: 10px;
   right: 16px;
   z-index: 1; }
+
+#getStartedBtn {
+  background-color: black;
+  color: white; }
+
+.navbar-brand {
+  transform: translateX(-50%);
+  left: 50%;
+  position: absolute; }
+
+#dropdownMenuButton {
+  color: black; }
+
+.fas {
+  color: black; }
+
+#womanHome {
+  max-width: 100%; }
+
+#subscribeBtn {
+  background-color: #5fe2e2;
+  color: white; }
+
+#homepageHeader {
+  font-family: "Righteous", cursive; }
