--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,10 @@ button {
   color: black; }
 
 #womanHome {
-  max-width: 100%; }
+  max-width: 100%;
+  max-height: 80vh;
+  width: auto;
+  height: auto; }
 
 #subscribeBtn {
   background-color: #5fe2e2;
@@ -61,3 +64,20 @@ button {
 
 #homepageHeader {
   font-family: "Righteous", cursive; }
+
+#homepageText {
+  width: 100%;
+  height: 55vh;
+  overflow: auto;
+  overflow-y: scroll; }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#homepageText::-webkit-scrollbar {
+  display: none; }
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#homepageText {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */ }
