--- a/css/styles.scss
+++ b/css/styles.scss
@@ -71,7 +71,10 @@ button {
         }
 
 #womanHome {
-    max-width: 100%;
+    max-width:100%;
+    max-height:80vh;
+    width: auto;
+    height: auto;
 }
 
 #subscribeBtn {
@@ -81,4 +84,22 @@ button {
 
 #homepageHeader {
     font-family: $header-font;
+}
+
+#homepageText {
+        width: 100%;
+        height: 55vh;
+        overflow: auto;
+        overflow-y: scroll;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#homepageText::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#homepageText {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
