--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,9 @@ h1, h2, h3, h5, h6 {
   .footerLinks:hover {
     color: grey; }
 
+.bg-midtrans {
+  background-color: rgba(255, 255, 255, 0.384); }
+
 #navText, #loginButton {
   color: black;
   font-family: "Montserrat", sans-serif; }
