--- a/css/styles.scss
+++ b/css/styles.scss
@@ -211,6 +211,9 @@ button {
     -o-background-size: cover;
 }
 
+#faqContainer {
+    height: 1000px;
+}
 // .card-body {
 //     font-family: $secondary-font;
 // }
