add footer to boxdescription.html and update scss to show background image

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,14 +131,16 @@ button {
   /* Firefox */ }
 
 #boxDescBody {
-  background: url(/img/whatsinboxbkg.jpg);
-  background-color: #29232d;
+  background: url(/img/whatsinboxbkg.jpg) fixed;
   background-position: center center;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover; }
+
+#boxDescContainer {
+  height: 1200px; }
 
 .carousel-caption {
   position: relative;
